NOCC 1.8.3  ???? ??, ????

  Bugs
    * Bug #2963603 : Function name tripos instead of stripos, typo? (openfan).
    * Bug #2960858 : Exception incorrectly handled: break instead of exit?
     (openfan).
    * Bug #2952899 : dropdown list with themes is not filled on login page
     (openfan).
    * Bug #2952928 : Title contact list window incorrect: Contact list of %1$
     (openfan).
    * Bug #2946163 : Unable to copy or move the message... (Evgeny Secret).

  Feature Requests
    * RFE #2985090 : Simplify character encoding list items (Tim Gerundt).
    * RFE #2976406 : Check for SPAM header flags (Tim Gerundt).

  Misc
    * Add date to RSS feed items (Tim Gerundt).
    * Fix problem with "Sent:" label (Tim Gerundt).

NOCC 1.8.2  January 30, 2010

  Bugs
    * Bug #2935857 : Can't detect language from IE8 (Tim Gerundt).
    * Bug #2838547 : Mail download don't include attachments (Tim Gerundt).
    * Bug #2838521 : HTML code get not replaced in text attachments (Tim
      Gerundt).

  Patches
    * Patch #2895511 : Updates for PHP 5.3.0 (Michiel van Loon).

  Misc
    * Switch to FCKeditor 2.6.5 (Tim Gerundt).
    * Support "Flagged" column in inbox (Tim Gerundt).
    * Small renamings at the login page (Tim Gerundt).
    * Make "Select contacts" more visible at mail writing (Tim Gerundt).
    * Fix "unknown" attachment filename in some cases (Piotr Stęclik).
    * Fix syntax error in RSS feed script (Tim Gerundt).
    * Optimize regexs for remote image security (Tim Gerundt).

NOCC 1.8.1  July 09, 2009

  Bugs
    * Bug #2816859 : Problems with mail encoding (Tim Gerundt).
    * Bug #2816844 : Missing "Attachments:" label (Tim Gerundt).

  Misc
    * Use translation for [unknown] attachments (Tim Gerundt).
    * Language files update (Siebrand Mazeland, translatewiki.net).

NOCC 1.8  July 01, 2009

  Bugs
    * Bug #2593952 : User-friendly error message, if config file missing
      (Tobias Mathes).