@@ -1,6 +1,7 @@
 NOCC 1.8.3  ???? ??, ????
 
   Bugs
+    * Bug #2987135 : Add second "Re:" by reply (Tim Gerundt).
     * Bug #2963603 : Function name tripos instead of stripos, typo? (openfan).
     * Bug #2960858 : Exception incorrectly handled: break instead of exit?
      (openfan).
